--- a/sdk/promena-transformer/promena-transformer-parent/pom.xml
+++ b/sdk/promena-transformer/promena-transformer-parent/pom.xml
@@ -11,6 +11,29 @@
 
     <name>[SDK][POM] Promena transformer</name>
 
+    <repositories>
+        <repository>
+            <id>beone-releases</id>
+            <url>http://nexus.office.beone.pl/repository/releases</url>
+        </repository>
+
+        <repository>
+            <id>codelds</id>
+            <url>https://code.lds.org/nexus/content/groups/main-repo</url>
+        </repository>
+    </repositories>
+
+    <distributionManagement>
+        <repository>
+            <id>beone-releases</id>
+            <url>http://nexus.office.beone.pl/repository/releases</url>
+        </repository>
+        <snapshotRepository>
+            <id>beone-snapshots</id>
+            <url>http://nexus.office.beone.pl/repository/snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
+
     <properties>
         <kotlin.version>1.3.31</kotlin.version>
         <java.version>11</java.version>
@@ -18,6 +41,8 @@
         <promena-transformer.version>3.0.0-alpha</promena-transformer.version>
 
         <spring-boot.version>2.1.3.RELEASE</spring-boot.version>
+
+        <slf4j.version>1.7.25</slf4j.version>
 
         <logback.version>1.2.3</logback.version>
         <junit.version>4.12</junit.version>
@@ -44,12 +69,6 @@
             </dependency>
 
             <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter</artifactId>
-                <version>${spring-boot.version}</version>
-            </dependency>
-
-            <dependency>
                 <groupId>pl.beone.promena.transformer</groupId>
                 <artifactId>promena-transformer-application-model</artifactId>
                 <version>${promena-transformer.version}</version>
@@ -63,6 +82,18 @@
                 <groupId>pl.beone.promena.transformer</groupId>
                 <artifactId>promena-transformer-internal</artifactId>
                 <version>${promena-transformer.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter</artifactId>
+                <version>${spring-boot.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>${slf4j.version}</version>
             </dependency>
 
             <dependency>
