--- a/sdk/promena-extension/promena-extension-parent/pom.xml
+++ b/sdk/promena-extension/promena-extension-parent/pom.xml
@@ -16,6 +16,29 @@
 
     <name>[SDK][POM] Promena extension</name>
 
+    <repositories>
+        <repository>
+            <id>beone-releases</id>
+            <url>http://nexus.office.beone.pl/repository/releases</url>
+        </repository>
+
+        <repository>
+            <id>codelds</id>
+            <url>https://code.lds.org/nexus/content/groups/main-repo</url>
+        </repository>
+    </repositories>
+
+    <distributionManagement>
+        <repository>
+            <id>beone-releases</id>
+            <url>http://nexus.office.beone.pl/repository/releases</url>
+        </repository>
+        <snapshotRepository>
+            <id>beone-snapshots</id>
+            <url>http://nexus.office.beone.pl/repository/snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
+
     <properties>
         <promena-core.version>3.0.0-alpha</promena-core.version>
         <promena-transformer.version>3.0.0-alpha</promena-transformer.version>
