--- a/sdk/promena/promena-parent/pom.xml
+++ b/sdk/promena/promena-parent/pom.xml
@@ -17,6 +17,29 @@
 
     <name>[SDK][POM] Promena</name>
 
+    <repositories>
+        <repository>
+            <id>beone-releases</id>
+            <url>http://nexus.office.beone.pl/repository/releases</url>
+        </repository>
+
+        <repository>
+            <id>codelds</id>
+            <url>https://code.lds.org/nexus/content/groups/main-repo</url>
+        </repository>
+    </repositories>
+
+    <distributionManagement>
+        <repository>
+            <id>beone-releases</id>
+            <url>http://nexus.office.beone.pl/repository/releases</url>
+        </repository>
+        <snapshotRepository>
+            <id>beone-snapshots</id>
+            <url>http://nexus.office.beone.pl/repository/snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
+
     <properties>
         <kotlin.version>1.3.31</kotlin.version>
         <java.version>11</java.version>
