--- a/mm/alfresco-promena-message-broker-client/pom.xml
+++ b/mm/alfresco-promena-message-broker-client/pom.xml
@@ -11,6 +11,7 @@
 
     <properties>
         <kotlin.version>1.3.11</kotlin.version>
+<!--        <kotlin.compiler.incremental>true</kotlin.compiler.incremental>-->
         <java.version>1.8</java.version>
 
         <assertj.version>3.10.0</assertj.version>
@@ -57,6 +58,12 @@
             <!--<scope>provided</scope>-->
         </dependency>
 
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-autoconfigure</artifactId>-->
+<!--            <version>2.1.4.RELEASE</version>-->
+<!--        </dependency>-->
+
         <dependency>
             <groupId>pl.beone.promena.transformer</groupId>
             <artifactId>promena-transformer-application-model</artifactId>
@@ -76,6 +83,16 @@
             <groupId>pl.beone.lib</groupId>
             <artifactId>kryo-message-converter</artifactId>
             <version>1.0.0</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework</groupId>
+                    <artifactId>spring-jms</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>javax.jms</groupId>
+                    <artifactId>javax.jms-api</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
