--- a/mm/alfresco-promena-message-broker-client/pom.xml
+++ b/mm/alfresco-promena-message-broker-client/pom.xml
@@ -16,6 +16,7 @@
 
         <spring.version>5.1.3.RELEASE</spring.version>
 
+        <testcontainers.version>1.11.2</testcontainers.version>
         <assertj.version>3.10.0</assertj.version>
         <mockito-kotlin.version>2.1.0</mockito-kotlin.version>
         <!-- Alfresco Maven Plugin version to use -->
@@ -103,6 +104,24 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
             <version>${spring.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>testcontainers</artifactId>
+            <version>${testcontainers.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.kotlintest</groupId>
+            <artifactId>kotlintest-runner-junit5</artifactId>
+            <version>3.3.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.kotlintest</groupId>
+            <artifactId>kotlintest-extensions-spring</artifactId>
+            <version>3.3.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
