--- a/extension/connector/message-broker/pom.xml
+++ b/extension/connector/message-broker/pom.xml
@@ -7,17 +7,20 @@
     <parent>
         <groupId>pl.beone.promena.sdk.maven.parent</groupId>
         <artifactId>promena-extension-parent</artifactId>
-        <version>0.9.0</version>
+        <version>0.9.0-SNAPSHOT</version>
     </parent>
 
     <groupId>pl.beone.promena.connector</groupId>
     <artifactId>promena-connector-message-broker</artifactId>
-    <version>0.9.0</version>
+    <version>0.9.0-SNAPSHOT</version>
 
     <name>[EXTENSION][CONNECTOR] Message broker</name>
 
     <packaging>pom</packaging>
     <modules>
+        <module>promena-connector-message-broker-application-model</module>
+        <module>promena-connector-message-broker-contract</module>
+        <module>promena-connector-message-broker-internal</module>
         <module>delivery/promena-connector-message-broker-delivery-jms</module>
         <module>promena-connector-message-broker-configuration</module>
         <module>promena-connector-message-broker-integration-test</module>
@@ -49,9 +52,11 @@
     </pluginRepositories>
 
     <properties>
-        <promena-connector-message-broker.version>0.9.0</promena-connector-message-broker.version>
+        <promena-connector-message-broker.version>0.9.0-SNAPSHOT</promena-connector-message-broker.version>
 
-        <kryo-message-converter.version>0.9.0</kryo-message-converter.version>
+        <kryo-message-converter.version>0.9.0-SNAPSHOT</kryo-message-converter.version>
+
+        <commons-math3.version>3.6.1</commons-math3.version>
     </properties>
 
     <dependencies>
