--- a/extension/connector/message-broker/promena-connector-message-broker-configuration/pom.xml
+++ b/extension/connector/message-broker/promena-connector-message-broker-configuration/pom.xml
@@ -5,13 +5,18 @@
     <parent>
         <groupId>pl.beone.promena.connector</groupId>
         <artifactId>promena-connector-message-broker</artifactId>
-        <version>0.9.0</version>
+        <version>0.9.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>promena-connector-message-broker-configuration</artifactId>
 
     <dependencies>
+        <dependency>
+            <groupId>pl.beone.promena.connector</groupId>
+            <artifactId>promena-connector-message-broker-internal</artifactId>
+            <version>${promena-connector-message-broker.version}</version>
+        </dependency>
         <dependency>
             <groupId>pl.beone.promena.connector</groupId>
             <artifactId>promena-connector-message-broker-delivery-jms</artifactId>
@@ -23,5 +28,12 @@
             <artifactId>kryo-message-converter</artifactId>
             <version>${kryo-message-converter.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-math3</artifactId>
+            <version>${commons-math3.version}</version>
+        </dependency>
+
     </dependencies>
 </project>
