--- a/lib/kryo-message-converter/pom.xml
+++ b/lib/kryo-message-converter/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>pl.beone.lib</groupId>
     <artifactId>kryo-message-converter</artifactId>
-    <version>0.9.0</version>
+    <version>0.9.0-SNAPSHOT</version>
 
     <name>[LIB] kryo-message-converter</name>
 
@@ -39,7 +39,7 @@
         <kotlin.version>1.3.40</kotlin.version>
         <java.version>11</java.version>
 
-        <promena-core.version>0.9.0</promena-core.version>
+        <promena-core.version>0.9.0-SNAPSHOT</promena-core.version>
 
         <spring-jms.version>5.1.5.RELEASE</spring-jms.version>
         <javax.jms-api.version>2.0.1</javax.jms-api.version>
