--- a/sdk/promena-transformer/promena-transformer-parent/pom.xml
+++ b/sdk/promena-transformer/promena-transformer-parent/pom.xml
@@ -49,6 +49,8 @@
         <slf4j.version>1.7.26</slf4j.version>
         <kotlin-logging.version>1.7.3</kotlin-logging.version>
 
+        <joda-time.version>2.10.4</joda-time.version>
+
         <logback.version>1.2.3</logback.version>
         <kotlintest-runner-junit5.version>3.4.0</kotlintest-runner-junit5.version>
         <junit-jupiter.version>5.5.1</junit-jupiter.version>
@@ -96,6 +98,11 @@
                 <artifactId>spring-boot-starter</artifactId>
                 <version>${spring-boot.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-test</artifactId>
+                <version>${spring-boot.version}</version>
+            </dependency>
 
             <dependency>
                 <groupId>org.slf4j</groupId>
@@ -106,6 +113,12 @@
                 <groupId>io.github.microutils</groupId>
                 <artifactId>kotlin-logging</artifactId>
                 <version>${kotlin-logging.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>joda-time</groupId>
+                <artifactId>joda-time</artifactId>
+                <version>${joda-time.version}</version>
             </dependency>
 
             <dependency>
