--- a/base/promena-core/external/external-akka/pom.xml
+++ b/base/promena-core/external/external-akka/pom.xml
@@ -33,5 +33,10 @@
             <groupId>com.typesafe.akka</groupId>
             <artifactId>akka-stream_2.12</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+        </dependency>
     </dependencies>
 </project>
