--- a/lib/connector/http/pom.xml
+++ b/lib/connector/http/pom.xml
@@ -47,6 +47,7 @@
         <java.version>11</java.version>
 
         <promena-core.version>1.0.0</promena-core.version>
+        <promena-connector-http.version>1.0.0</promena-connector-http.version>
 
         <fuel.version>2.2.1</fuel.version>
         <fuel-coroutines.version>2.2.1</fuel-coroutines.version>
@@ -70,6 +71,11 @@
             <groupId>pl.beone.promena.base</groupId>
             <artifactId>promena-core-contract</artifactId>
             <version>${promena-core.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>pl.beone.promena.connector</groupId>
+            <artifactId>promena-connector-http-application-model</artifactId>
+            <version>${promena-connector-http.version}</version>
         </dependency>
 
         <dependency>
