--- a/base/promena-transformer/pom.xml
+++ b/base/promena-transformer/pom.xml
@@ -52,6 +52,8 @@
         <promena-transformer.version>1.0.0</promena-transformer.version>
 
         <type-converter.version>1.0.0</type-converter.version>
+
+        <java-util.version>1.38.0</java-util.version>
     </properties>
 
     <dependencies>
