--- a/sdk/promena-transformer/promena-transformer-parent/pom.xml
+++ b/sdk/promena-transformer/promena-transformer-parent/pom.xml
@@ -92,6 +92,11 @@
                 <artifactId>promena-transformer-internal</artifactId>
                 <version>${promena-transformer.version}</version>
             </dependency>
+            <dependency>
+                <groupId>pl.beone.promena.base</groupId>
+                <artifactId>promena-transformer-util</artifactId>
+                <version>${promena-transformer.version}</version>
+            </dependency>
 
             <dependency>
                 <groupId>org.springframework.boot</groupId>
