--- a/intellij/promena/build.gradle
+++ b/intellij/promena/build.gradle
@@ -55,9 +55,13 @@ apply plugin: 'java'
 apply plugin: 'kotlin'
 
 intellij {
-    version '2019.2.2'
+    version '2019.2.3'
     plugins = ['java', 'Kotlin']
     updateSinceUntilBuild false
+}
+
+runIde {
+    jvmArgs '-Xmx2g'
 }
 
 patchPluginXml {
